--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <img src="public/logo.png">
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <div id="id">
 
+                <img src="public/logo.png">
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+
+                    <div id="id">
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 <a class="nav-link active" id="menu_item" aria-current="page" href="#">Design</a>
@@ -86,7 +88,8 @@
                                 class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Desire</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                <p class="card-text" style="color:black">Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit.
                                     Pellentesque
                                     congue magna in pharetra rutrum.</p>
                             </div>
@@ -96,7 +99,8 @@
                                 class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Aspiration</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                <p class="card-text" style="color:black">Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit.
                                     Pellentesque
                                     congue magna in pharetra rutrum.</p>
                             </div>
@@ -106,7 +110,8 @@
                                 class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Design</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                <p class="card-text" style="color:black">Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit.
                                     Pellentesque
                                     congue magna in pharetra rutrum.</p>
                             </div>
@@ -116,7 +121,8 @@
                                 class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Lust</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                <p class="card-text" style="color:black">Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit.
                                     Pellentesque
                                     congue magna in pharetra rutrum.</p>
                             </div>
@@ -126,7 +132,8 @@
 
             </div>
 
-            <div>
+
+            <div style="margin-top: 5%;">
                 <a id="what_makes_us_so_awasome">What makes us so awesome</a>
                 <div class="container text-center" style="height: auto;width: 1000px;">
                     <div class="row">
@@ -140,7 +147,7 @@
 
                             <button class="view_more">
                                 <a class="view_more_text">
-                                    View more
+                                    <i>View more</i>
                                 </a>
                             </button>
                         </div>
@@ -154,7 +161,7 @@
 
                             <button class="view_more" style=" text-decoration: none;">
                                 <a class="view_more_text">
-                                    View more
+                                    <i>View more</i>
                                 </a>
                             </button>
                         </div>
@@ -167,7 +174,7 @@
                             <p></p>
                             <button class="view_more">
                                 <a class="view_more_text">
-                                    View more
+                                    <i>View more</i>
                                 </a>
                             </button>
                         </div>
@@ -175,15 +182,49 @@
                 </div>
             </div>
 
-            <footer>
+            <footer class="footer-32892 pb-0" style="margin-top: 10%;">
+                <div class="site-section">
+                    <div class="container">
+                        <div class="row">
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                            <div class="col-md pr-md-5 mb-4 mb-md-0">
+                                <h1 style="font-family:Georgia italic;
+                                font-size: 28px;">What makes as so awesome</h1>
+                                <a style="color:white;font-size: 14px;">
+                                    Mi vitae magnis Fusce laoreet nibh felis porttitor laoreet
+                                    Vestibulum faucibus. At Nulla id tincidunt ut sed semper
+                                    vel Lorem condimentum ornare. Laoreet Vestibulum lacinia massa a commodo
+                                    habitasse velit Vestibulum tincidunt I.</a>
+                            </div>
+                            <div class="col-md mb-4 mb-md-0">
+                                <h3 style="font-family:Georgia italic;
+                                font-size: 28px;color:white">Contact us</h3>
+                                <ul class="list-unstyled tweets">
+                                    <li class="d-flex">
+                                        <div class="mr-4"><span class="icon icon-twitter"></span></div>
+                                        <div>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere unde
+                                                omnis
+                                                veniam porro excepturi.</p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
 
+
+
+                        </div>
+                    </div>
+                </div>
             </footer>
 
-
         </div>
-
     </main>
-
 </body>
 
 </html>
